gfx/2d/DrawEventRecorder.h
@@ -124,6 +124,8 @@ class DrawEventRecorderPrivate : public DrawEventRecorder {
   virtual void StoreSourceSurfaceRecording(SourceSurface* aSurface,
                                            const char* aReason);
 
+  virtual void RecordSourceSurfaceDestruction(SourceSurface* aSurface);
+
   virtual void AddDependentSurface(uint64_t aDependencyId) {
     MOZ_CRASH("GFX: AddDependentSurface");
   }
