gfx/2d/DrawTargetWrapAndRecord.cpp
@@ -27,10 +27,8 @@ static void WrapAndRecordSourceSurfaceUserDataFunc(void* aUserData) {
   WrapAndRecordSourceSurfaceUserData* userData =
       static_cast<WrapAndRecordSourceSurfaceUserData*>(aUserData);
 
-  userData->recorder->RemoveSourceSurface((SourceSurface*)userData->refPtr);
-  userData->recorder->RemoveStoredObject(userData->refPtr);
-  userData->recorder->RecordEvent(
-      RecordedSourceSurfaceDestruction(ReferencePtr(userData->refPtr)));
+  userData->recorder->RecordSourceSurfaceDestruction(
+      static_cast<SourceSurface*>(userData->refPtr));
 
   delete userData;
 }
